# social-reachy

./: .gitignore  CLAUDE.md  README.md
apps/companion/: .gitignore  README.md  index.html  plan.md  pyproject.toml
apps/companion/profiles/_companion_locked_profile/: custom_tool.py  instructions.txt  sweep_look.py  tools.txt
apps/companion/src/companion/: app_lifecycle.py  config.py  console.py  conversation_handler.py  gaze.py  gaze_move.py  huggingface_realtime.py  idle_policy.py  main.py  memory.py  moves.py  prompts.py  sessions.py  startup_settings.py  tool_spaces.py
apps/companion/src/companion/static/: index.html
apps/companion/src/companion/tools/: background_tool_manager.py  camera.py  core_tools.py  dance.py  forget.py  gaze_tracking.py  go_to_sleep.py  idle_do_nothing.py  move_head.py  play_emotion.py  remember.py  stop_dance.py  stop_emotion.py  task_cancel.py  task_status.py
apps/companion/tests/: test_app_lifecycle.py  test_config.py  test_config_name_collisions.py  test_console.py  test_external_loading.py  test_huggingface_realtime.py  test_idle_policy.py  test_main.py  test_mcp_client.py  test_mcp_client_integration.py  test_memory.py  test_moves.py  test_personality_avatars.py  test_personality_delete.py  test_profile_paths.py  test_startup_settings.py  test_streaming.py  test_tool_space_runtime.py  test_tool_spaces.py
apps/companion/tests/audio/: test_startup_config.py
apps/companion/tests/tools/: test_background_tool_manager.py  test_camera.py  test_gaze_tracking.py  test_go_to_sleep.py  test_play_emotion.py
apps/social_app/: README.md  index.html  plan.md  pyproject.toml
apps/social_app/social_app/: gaze.py  main.py  perception.py
docs/: ai_brain_notes.md  reachy_mini_notes.md
scripts/: run_sim.ps1
