[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "social_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "opencv-python>=4.9"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
social_app = "social_app.main:SocialApp"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
social_app = ["**/*"] # Also include all non-.py files